--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Django==4.0.5
 django-cors-headers==3.13.0
 django-restframework==0.0.1
 djangorestframework==3.13.1
+gunicorn==20.1.0
 pytz==2022.1
 sqlparse==0.4.2
